@@ -17,6 +17,9 @@ not yet  BJH  Release 10.71.00
               makeman: deal properly with backlash in source.  Thanks Willem
               van Schaik <willem@schaik.com>.
 
+              Build: work around bug in GCC < 4.2 related to SSE2 builtins
+              that causes compile of pamflip to fail.
+
 15.03.29 BJH  Release 10.70.00
 
               Add st4topgm, pgmtost4.
